src/app/components/assessment-rating-and-recommendation/topic-level-assessment.component.css
/*
 * Copyright (c) 2022 - Thoughtworks Inc. All rights reserved.
 */

@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');


.topicQuestions {
  height: 70vh;
  overflow: auto;
  margin-right: -6px;
  width: 340vh;
}


.col-md-8 {
  flex: 0 0 auto;
  width: 73.666667%;
  padding-left: 87.8%;
}

.mat-stroked-button {
  min-width: 88px;
  color: #32616E;
}

.saveButton {
  width: 87px;
  height: 33px;
  border-radius: 4px;
  background-color: #043D4E;
  color: white;
  float: right;
  margin-top: 15px;
  margin-right: 3.8em;
}

.parameter {

  background-color: #45A0AC1D;
  height: 50px;
  margin-top: 35px;
  width: 97%;
  color: #043D4E;
  font-size: 20px;
  font-weight: bold;
  font-family: 'Inter', sans-serif;
  display: inline-table;
  padding: 15px 152px 8px 20px;

}

.question {
  margin-top: 32px;
  padding-bottom: 32px;
  padding-left: 15px;
  padding-right: 21px;
  opacity: 1;
}

.question-content {
  font-size: 18px;
  font-weight: bolder;
  font-family: 'Inter', sans-serif;
  color: #000000;
}


::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-thick {
  color: #45A0AC !important;
}

::ng-deep .mat-form-field.mat-focused .mat-form-field-label {
  color: #00000099 !important;
}

::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
  color: #45A0AC !important;
}

.mat-form-field.mat-warn .mat-input-element, .mat-form-field.mat-focused .mat-input-element {
  caret-color: #45A0AC !important;
}

::ng-deep .topicAssessment {
  overflow-y: scroll !important;
}

.parameterScoring {
  width: 90%;
  margin-right: 20px;

}

#averageMaturityScore {
  display: flex;
  position: inherit;
  flex-direction: row;
}

#questionContainer {
  display: flex;
  width: 100%;
}

::ng-deep .saveSnackbar {
  background-color: #6B9F78 !important;
}

.assessmentDetailsDisplay {
  display: flex;
  justify-content: space-between;
  width: 98%;
  height: 95%;
}
@media screen and (max-width: 1000px) {
  .assessmentDetailsDisplay{
    width: 100%;
  }
  .topicQuestions{
    margin-right: -4px;
  }
  .question-content{
    font-size: 14px;
  }
  .parameter{
    font-size: 17px;
  }
}

